--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.7"
   }
 }
